<resources>
    <string name="app_name">!app_name</string>
    <string name="app_name_heading">!app_name_heading</string>
    <string name="title_home">!home_title</string>
    <string name="title_generatedPasswords">!generatedPasswords_title</string>
    <string name="title_settings">!settings_title</string>
    <string name="contentHome_btnNewText">!newPassword</string>
    <string name="contentHome_btnCopyText">!btnCopy</string>
    <string name="toast_passwordCopied">!passwordCopied</string>
    <string name="title_noPasswordName">!noEmptyTitleAvailable</string>
    <string name="cab_delete">!deleteItems</string>
    <string name="title_activity_settings">settingsActivity</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact based on your message
        history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string name="pref_password_length">!Password_LENGTH</string>
    <string name="pref_password_numbers">!numbers_AVAILABLE</string>
    <string name="pref_password_numbers_description">!numbers_available_DESCRIPTION</string>
    <string name="pref_password_specialChars_EXTRA">!specialChars_EXTRA</string>
    <string name="pref_password_letters">!password_letters</string>
    <string name="pref_password_specialChars">!special_Chars</string>
    <string name="pref_password_specialChars_description">!Special_Chars Description</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <string-array name="pref_example_multi_titles">
        <item>Aaaaaa</item>
        <item>Bbbbbb</item>
        <item>Cccccc</item>
    </string-array>

    <string-array name="pref_example_multi_values">
        <item>0</item>
        <item>1</item>
        <item>2</item>
    </string-array>

    <string-array name="pref_password_letters_list_titles">
        <item>!small_Letters</item>
        <item>!Large_Letters</item>
        <item>!mixed_smallLarge</item>
    </string-array>

    <string-array name="pref_password_letters_list_values">
        <item>0</item>
        <item>1</item>
        <item>2</item>
    </string-array>

</resources>
