<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
            android:title="@string/pref_header_general"
            android:key="password_settings">
        <EditTextPreference
                android:key="password_length"
                android:title="@string/pref_password_length"
                android:defaultValue="20"
                android:selectAllOnFocus="true"
                android:inputType="number"
                android:capitalize="none"
                android:singleLine="true"
                android:maxLines="1"/>

        <SwitchPreference
                android:key="password_numbers"
                android:title="@string/pref_password_numbers"
                android:summary="@string/pref_password_numbers_description"
                android:defaultValue="true"/>

        <ListPreference
                android:key="password_Letters"
                android:title="@string/pref_password_letters"
                android:defaultValue="0"
                android:entries="@array/pref_password_letters_list_titles"
                android:entryValues="@array/pref_password_letters_list_values"
                android:negativeButtonText="@null"
                android:positiveButtonText="@null"/>

        <SwitchPreference
                android:key="password_specialChars"
                android:title="@string/pref_password_specialChars"
                android:summary="@string/pref_password_specialChars_description"
                android:defaultValue="true"/>

        <EditTextPreference
                android:key="password_extra_specialChars"
                android:title="@string/pref_password_specialChars_EXTRA"
                android:defaultValue="@null"
                android:selectAllOnFocus="false"
                android:inputType="textNoSuggestions"
                android:capitalize="none"
                android:singleLine="true"
                android:maxLines="1"/>
    </PreferenceCategory>
</PreferenceScreen>
